# consentpacket

./: .gitignore  MODULE.bazel  README.md  pants.toml
generators/python_tools/: BUILD.bazel  requirements.in  requirements.txt
schema/: BUILD.bazel  consentpackets-source.yaml
